--- a/Anime Recommendation System/Readme
+++ b/Anime Recommendation System/Readme
@@ -1,8 +1,8 @@
 Project: Anime Recommendation System
 Status: In-Progress
-Goal: 
+Objectives: 
   - explore different data mining techniques for pattern identification
   - explore different approaches to build recommendation systems
-  - build recommendation system for Anime Dataset from kaggle.
+
   
   
